--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,7 @@
             "cwd": "${workspaceFolder}",
             "env": {},
             "envFile": "${workspaceFolder}/.env",
+            // just for sys.stdin.readline()----> "console": "integratedTerminal",
             "debugOptions": [
                 "RedirectOutput"
             ]
