--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,9 @@
             "name": "Debug (Launch)",
             "request": "launch",
             "cwd": "${workspaceFolder}",
-            "console": "internalConsole",
+            "console": "integratedTerminal",
             "stopOnEntry": false,
-            "mainClass": "hello",
+            "mainClass": "",
             "args": ""
         },
         {
@@ -50,7 +50,9 @@
             "console": "integratedTerminal",
             "env": {},
             "envFile": "${workspaceFolder}/.env",
-            "debugOptions": []
+            "debugOptions": [
+                "RedirectOutput"
+            ]
         },
         {
             "name": "Python: Terminal (external)",
